Fixed the Footer language selector Alignmen issue on  mobile Screen

--- a/src/Components/LanguageSelector/LanguageSelector.module.css
+++ b/src/Components/LanguageSelector/LanguageSelector.module.css
@@ -53,7 +53,7 @@
   border-radius: 5px;
   padding: 0.2em 2.3em;
   width: 100%;
-  padding: 0.2em 0.2em;
+  padding: 0.2em 2.3em;
   font-size: 0.9rem;
   line-height: 1.5rem;
   font-weight: 600;
